--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,77 +1,234 @@
 /* NAVBAR */
+#row-nav {
+    background-color: #e70000;
+    width: 100%;
+    height: 30px;
+    padding: 0;
+    margin: 0;
+    position: fixed;
+    z-index: 100;
+}
+
+.nav-links {
+    color: white;
+    padding: 7px;
+    font-size: 12px;
+}
+
+#row-nav .nav-links span:not(.glyphicon) {
+    padding-right: 13px;
+}
+
 .rs-row-navbar {
-    margin-bottom: 50px;
+    margin-bottom: 100px;
 }
 
 .rs-navbar-bg {
-    background-color: #183645;
+    height: 70px;
+    margin-top: 30px;
+    background-color: #ffffff;
+    box-shadow: 0 1px 5px 1px #b4b4b4;
 }
 
 .rs-img-logo {
     float: left;
-    margin-left: -1px;
-    margin-top: -8px;
 }
 
 .rs-navbar-brand {
     float: left;
+    padding-top: 10px;
     padding-left: 10px;
-    color: #e7e7e7;
+    color: #656565;
     font-size: 28px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .rs-active {
-    background-color: #e90006;
+    border-bottom: 2px solid red;
 }
 
-.navbar-inverse .navbar-nav > .rs-active > a:hover {
-    color: white;
+.rs-navbar-links {
+    height: 70px;
+}
+
+.rs-navbar-links .menu {
+    height: 100%;
+}
+
+.rs-navbar-links .menu a {
+    color: red;
+    padding-top: 23px;
+    font-size: 15px;
+    height: 100%;
+    font-family: Helvetica;
+}
+
+.rs-navbar-links .menu a:hover {
+    color: #ca0000;
+    background-color: transparent;
+}
+
+.rs-navbar-links .menu:not(.open a):hover {
+    cursor: pointer;
+    color: #ca0000;
+    border-bottom: 2px solid #ca0000;
+}
+
+.rs-navbar-search {
+    padding: 17px 30px 20px 20px;
+    width: 230px;
+}
+
+.rs-navbar-search-icon {
+    padding: 17px 40px 20px 0;
+    color: #F60006;
+}
+
+.menu:focus {
+    background-color: transparent;
+}
+
+.menu-admin .dropdown-menu {
+    left: 0;
+    height: 340px;
+    width: 180px;
+}
+
+.menu-pim .dropdown-menu {
+    left: 0;
+    height: 130px;
+    width: 180px;
+}
+
+.menu-leave .dropdown-menu {
+    left: 0;
+    height: 165px;
+    width: 180px;
+}
+
+.menu-time .dropdown-menu {
+    left: 0;
+    height: 200px;
+    width: 180px;
+}
+
+.menu-performance .dropdown-menu {
+    left: 0;
+    height: 235px;
+    width: 180px;
+}
+
+.menu-recruitment .dropdown-menu {
+    left: 0;
+    height: 135px;
+    width: 180px;
+}
+
+.menu-discipline .dropdown-menu {
+    left: 0;
+    height: 90px;
+    width: 180px;
+}
+
+.menu-training .dropdown-menu {
+    left: 0;
+    width: 175px;
+    height: 165px;
+}
+
+.nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
+    background-color: transparent;
+    cursor: pointer;
+    color: #ca0000;
+    border-bottom: 2px solid #ca0000;
+}
+
+.dropdown-menu li a {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    color: #ca0000;
+}
+
+.menu .dropdown-menu li {
+    height: 30px;
+    padding: 15px;
+    margin-bottom: 5px;
+}
+
+.menu .dropdown-menu li a {
+    color: gray;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
 /* NAVBAR */
 
+body {
+    background-color: #f6f6f6;
+    font-family: "Helvetica";
+}
 
 /* SIDEBAR */
 .rs-sidebar-left-fixed {
+    float: left;
     height: auto;
-    width: 265px;
-    position: fixed;
-    background-color: #162230;
+    width: 245px;
+    margin: 20px;
+    position: absolute;
+    background-color: #ffffff;
 }
 
-.rs-sidebar-right-static {
-    margin-left: 265px;
-    height: 100%;
+.rs-sidebar-right-menu {
     position: static;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
+    margin-left: 285px;
+    margin-right: 20px;
+    margin-top: 120px;
+    margin-bottom: 20px;
+    height: auto;
+    background-color: white;
+}
+
+.rs-sidebar-right-content {
+    position: static;
+    margin-left: 285px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-top: -20px;
+    height: auto;
+    background-color: white;
+}
+
+
+.rs-border {
+    box-shadow: 0 2px 3px 0 rgba(215, 215, 215, 0.5);
 }
 
 .rs-profile-circle {
     margin: 0;
     border-radius: 50%;
-    background-color: white;
+    background-color: #dcdcdc;
     width: 40px;
     height: 40px;
 }
 
 .text-semibold {
     font-weight: bold;
-    color: white;
+    color: darkslategray;
 }
 
 .rs-profile-align-center {
     margin: 0;
-    padding: 30px 20px 20px 20px;
-    height: 95px;
-    width: 265px;
-    background-color: #162230;
+    margin-left: 10px;
+    padding: 0;
+    padding-top: 15px;
+    height: 70px;
+    width: 225px;
+    background-color: #ffffff;
 }
 
 .rs-text-size-mini {
-    color: white;
+    color: darkslategray;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 13px;
 }
@@ -85,16 +242,15 @@
 }
 
 .rs-sidebar-menu {
-    padding-left: 30px;
-    width: 105%;
-    height: 50px;
-    background-color: #183645;
-    border-top: 1px solid #0e1523;
-    border-bottom: 1px solid #0e1523;
+    padding: 8px 0 5px 15px;
+    width: 243px;
+    height: 35px;
+    background-color: #ececec;
+    font-size: 15px;
 }
 
 .rs-sidebar-menu-icon {
-    padding-right: 15px;
+    padding-right: 5px;
 }
 
 #wrapper + .rs-sidebar-right-static .container-fluid .rs-submenu-header h3 .rs-sidebar-toggle {
@@ -115,7 +271,7 @@
 }
 
 .rs-submenu {
-    margin-top: 2px;
+    margin-top: 5px;
     margin-left: 8px;
     position: absolute;
 }
@@ -164,14 +320,10 @@
 }
 
 #sidebar-wrapper {
-    z-index: 1000;
-    position: fixed;
-    left: 265px;
-    width: 0;
+    border: 1px solid #ebebeb;
     height: 100%;
-    margin-left: -265px;
-    overflow-y: auto;
-    background: #000;
+    margin: 0;
+    background-color: #ffffff;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -180,21 +332,22 @@
 
 #wrapper.toggled #sidebar-wrapper {
     width: 265px;
+    background-color: #ffffff;
 }
 /* Sidebar Styles */
 
 .sidebar-nav {
     position: static;
     top: 0;
-    width: 265px;
+    width: 245px;
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
 .sidebar-nav li:not(.sidebar-brand) {
-    text-indent: 30px;
-    line-height: 40px;
+    text-indent: 40px;
+    line-height: 35px;
 }
 
 .sidebar-nav li a {
@@ -203,9 +356,17 @@
     color: #999999;
 }
 
-.sidebar-nav li a:not(.navbar-brand):not(.sidebar-active):hover {
+.sidebar-nav li:not(.sidebar-brand) {
+    font-size: 13px;
+}
+
+.sidebar-nav li a.rs-sidebar-active {
+     color: #606060;
+ }
+
+.sidebar-nav li a:not(.navbar-brand):not(.rs-sidebar-active):hover {
     text-decoration: none;
-    color: #fff;
+    color: #747474;
     width: 102%;
     border-left: 3px solid #F60006;
 }
@@ -216,26 +377,25 @@
 }
 
 .sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
+    height: 35px;
+    font-size: 14px;
+}
+
+.sidebar-brand:first-child {
+    margin: 0 0 5px 0;
+}
+
+.sidebar-brand:last-child {
+    margin: 10px 0 5px 0;
 }
 
 .sidebar-nav > .sidebar-brand a {
-    color: white;
+    color: #636363;
 }
 
-#sidebar-wrapper {
-    width: 265px;
-    background-color: #162230;
-}
-
-.sidebar-active {
-    text-decoration: none;
-    width: 100%;
-    border-left: 3px solid #d10006;
-    border-right: 5px solid #ffffff;
-    background: #d10006;
+.rs-sidebar-active {
+    
+    background-color: #F60006;
     color: white;
 }
 
@@ -254,13 +414,14 @@
     margin-top: -5px;
     padding-bottom: 4px;
     padding-left: 16px;
+    height: 75px;
 }
 
 .rs-submenu-tabs {
-    height: 38px;
+    height: 35px;
     border-top: 1px solid #dddddd;
     border-bottom: 1px solid #dddddd;
-    background-color: #F5F5F5;
+    background-color: #22a316;
     padding-left: 50px;
 }
 
@@ -314,9 +475,6 @@
 
 /* MAIN CONTENT */
 
-.rs-main-content {
-    padding: 50px;
-}
 
 
 /* Table */
@@ -326,21 +484,24 @@
 
 .rs-table-action {
     width: 80px;
+    color: green;
 }
 
 .rs-table-border {
-    box-shadow: 0 1px 1px 3px #f7f7f7;
+    box-shadow: 0 2px 3px 0 rgba(229,229,229,.5);
     height: auto;
     margin-bottom: -20px;
+    padding: 0 25px 0 25px;
 }
 
 table {
-    border: 1px solid #DDDDDD;
-    font-family: "Roboto", Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-family: sans-serif, "Roboto", Helvetica Neue, Helvetica, Arial;
+    border: none;
+    border-color: transparent;
 }
 
 table tr {
-    height: 45px;
+    height: 55px;
     border: none;
 }
 
@@ -349,16 +510,111 @@ table thead:first-child tr td {
 }
 
 table thead:last-child tr td {
-    padding: 25px 0 25px 35px;
+    padding: 15px 0 15px 0;
 }
 
 table thead:nth-child(2) tr {
     font-weight: bold;
+    padding: 0;
+    height: 25px;
+}
+
+table thead:nth-child(2) tr td {
+    cursor: pointer;
 }
 
 .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
     vertical-align: middle;
 }
+
+table tbody tr td {
+    font-size: 13px;
+}
+
+table thead tr td {
+    font-size: 14px;
+}
+
+
+/* Checkbox */
+/* Base for label styling */
+[type="checkbox"]:not(:checked),
+[type="checkbox"]:checked {
+    position: absolute;
+    left: -9999px;
+}
+[type="checkbox"]:not(:checked) + label,
+[type="checkbox"]:checked + label {
+    position: relative;
+    padding-left: 1.95em;
+    cursor: pointer;
+}
+
+/* checkbox aspect */
+[type="checkbox"]:not(:checked) + label:before,
+[type="checkbox"]:checked + label:before {
+    content: '';
+    position: absolute;
+    left: 0; top: -7px;
+    width: 1.25em; height: 1.25em;
+    border: 2px solid #ccc;
+    background: #fff;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
+}
+
+.rs-checkbox-all {
+    width: 1.14em; height: 1.14em;
+}
+
+/* checked mark aspect */
+[type="checkbox"]:not(:checked) + label:after,
+[type="checkbox"]:checked + label:after {
+    content: '✔';
+    position: absolute;
+    top: -.4em; left: .19em;
+    font-size: 1.3em;
+    line-height: 0.8;
+    color: #22a316;
+    transition: all .2s;
+}
+/* checked mark aspect changes */
+[type="checkbox"]:not(:checked) + label:after {
+    opacity: 0;
+    transform: scale(0);
+}
+[type="checkbox"]:checked + label:after {
+    opacity: 1;
+    transform: scale(1);
+}
+/* disabled checkbox */
+[type="checkbox"]:disabled:not(:checked) + label:before,
+[type="checkbox"]:disabled:checked + label:before {
+    box-shadow: none;
+    border-color: #bbb;
+    background-color: #ddd;
+}
+[type="checkbox"]:disabled:checked + label:after {
+    color: #999;
+}
+[type="checkbox"]:disabled + label {
+    color: #aaa;
+}
+/* accessibility */
+[type="checkbox"]:checked:focus + label:before,
+[type="checkbox"]:not(:checked):focus + label:before {
+    border: 2px solid #bbb;
+}
+
+/* hover style just for information */
+label:hover:before {
+    border: 2px solid #4778d9!important;
+}
+
+
+
+
+
 
 .rs-filter {
     padding: 10px 5px;
@@ -433,6 +689,16 @@ input[type="text"]:focus {
 
 .edit-user-modal, .add-user-modal, .edit2-user-modal, .delete-user-modal {
     cursor: pointer;
+    color: #22a316;
+}
+
+.edit-user-modal {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.delete-user-modal {
+    color: #ce0000;
 }
 /* /Table */
 
@@ -479,7 +745,7 @@ input[type="text"]:focus {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background: #e90006;
+    background: #F60006;
     position: fixed;
     bottom: 25px;
     right: 25px;
@@ -490,7 +756,7 @@ input[type="text"]:focus {
 .plus{
     color: white;
     position: absolute;
-    top: -13px;
+    top: -7px;
     display: block;
     bottom: 0;
     left: -1px;
@@ -533,7 +799,7 @@ input[type="text"]:focus {
     display: block;
     opacity: 0;
     bottom: 0;
-    left: -1px;
+    left: 0;
     right: 0;
     text-align: center;
     padding: 0;
@@ -624,7 +890,7 @@ input[type="text"]:focus {
 /* Modal */
 .rs-modal {
     margin-top: 55px;
-    width: 600px;
+    max-width: 700px;
 }
 
 .rs-modal-content {
@@ -701,7 +967,7 @@ input[type="text"]:focus {
 }
 
 #rs-user-dropdown {
-    width: 269px;
+    width: 318px;
 }
 
 .rs-user-dropdown {
