--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -247,6 +247,7 @@ body {
     height: 35px;
     background-color: #ececec;
     font-size: 15px;
+    font-weight: 500;
 }
 
 .rs-sidebar-menu-icon {
@@ -353,7 +354,7 @@ body {
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    color: #999999;
+    color: #757575;
 }
 
 .sidebar-nav li:not(.sidebar-brand) {
@@ -366,7 +367,7 @@ body {
 
 .sidebar-nav li a:not(.navbar-brand):not(.rs-sidebar-active):hover {
     text-decoration: none;
-    color: #747474;
+    color: #575757;
     width: 102%;
     border-left: 3px solid #F60006;
 }
@@ -390,13 +391,16 @@ body {
 }
 
 .sidebar-nav > .sidebar-brand a {
-    color: #636363;
+    color: #515151;
 }
 
 .rs-sidebar-active {
-    
     background-color: #F60006;
     color: white;
+}
+
+.rs-sidebar-menu-active {
+    font-weight: bold;
 }
 
 .sidebar-nav li:not(.sidebar-brand):not(.sidebar-active):hover {
@@ -415,6 +419,16 @@ body {
     padding-bottom: 4px;
     padding-left: 16px;
     height: 75px;
+}
+
+h3.rs-submenu-header-buttons {
+    margin: 0;
+    padding-top: 5px;
+    padding-right: 25px;
+    color: gray;
+    height: 40px;
+    width: auto;
+    display: inline-block;
 }
 
 .rs-submenu-tabs {
@@ -532,7 +546,7 @@ table tbody tr td {
 }
 
 table thead tr td {
-    font-size: 14px;
+    font-size: 13px;
 }
 
 
@@ -668,14 +682,14 @@ input[type="text"]:focus {
 
 .rs-pagination {
     float: right;
-    margin: -20px 30px -20px 0;
+    margin: -15px 0 -20px 0;
     padding: 0 0 0 0;
 }
 
 .rs-showing {
     font-size: 14px;
     width: 300px;
-    margin-top: 5px;
+    margin-top: 10px;
     float: left;
 }
 
@@ -689,10 +703,10 @@ input[type="text"]:focus {
 
 .edit-user-modal, .add-user-modal, .edit2-user-modal, .delete-user-modal {
     cursor: pointer;
-    color: #22a316;
 }
 
 .edit-user-modal {
+    color: #22a316;
     padding-left: 5px;
     padding-right: 5px;
 }
@@ -739,152 +753,152 @@ input[type="text"]:focus {
     background: rgba(233, 0, 6, 0.71);
 }
 
-/* Floating Button */
+/*!* Floating Button *!*/
 
-#floating-button{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background: #F60006;
-    position: fixed;
-    bottom: 25px;
-    right: 25px;
-    cursor: pointer;
-    box-shadow: 0px 2px 5px #666;
-}
+/*#floating-button{*/
+    /*width: 50px;*/
+    /*height: 50px;*/
+    /*border-radius: 50%;*/
+    /*background: #F60006;*/
+    /*position: fixed;*/
+    /*bottom: 15px;*/
+    /*right: 15px;*/
+    /*cursor: pointer;*/
+    /*box-shadow: 0px 2px 5px #666;*/
+/*}*/
 
-.plus{
-    color: white;
-    position: absolute;
-    top: -7px;
-    display: block;
-    bottom: 0;
-    left: -1px;
-    right: 0;
-    text-align: center;
-    padding: 0;
-    margin: 0;
-    font-size: 38px;
-    font-family: 'Roboto';
-    font-weight: 300;
-    animation: plus-out 0.3s;
-    transition: all 0.3s;
-}
+/*.plus{*/
+    /*color: white;*/
+    /*position: absolute;*/
+    /*top: -7px;*/
+    /*display: block;*/
+    /*bottom: 0;*/
+    /*left: -1px;*/
+    /*right: 0;*/
+    /*text-align: center;*/
+    /*padding: 0;*/
+    /*margin: 0;*/
+    /*font-size: 38px;*/
+    /*font-family: 'Roboto';*/
+    /*font-weight: 300;*/
+    /*animation: plus-out 0.3s;*/
+    /*transition: all 0.3s;*/
+/*}*/
 
-#container-floating{
-    position: fixed;
-    width: 50px;
-    height: 70px;
-    bottom: 10px;
-    right: 10px;
-    z-index: 50;
-}
+/*#container-floating{*/
+    /*position: fixed;*/
+    /*width: 50px;*/
+    /*height: 70px;*/
+    /*bottom: 10px;*/
+    /*right: 10px;*/
+    /*z-index: 50;*/
+/*}*/
 
-#container-floating:hover{
-    height: 400px;
-    width: 90px;
-    padding: 30px;
-}
+/*#container-floating:hover{*/
+    /*height: 400px;*/
+    /*width: 90px;*/
+    /*padding: 30px;*/
+/*}*/
 
-#container-floating:hover .plus{
-    animation: plus-in 0.15s linear;
-    animation-fill-mode: forwards;
-}
+/*#container-floating:hover .plus{*/
+    /*animation: plus-in 0.15s linear;*/
+    /*animation-fill-mode: forwards;*/
+/*}*/
 
-.float-close{
-    color: white;
-    position: absolute;
-    z-index: 1000;
-    top: 5px;
-    display: block;
-    opacity: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    text-align: center;
-    padding: 0;
-    margin: 0;
-    transform: rotateZ(-70deg);
-    transition: all 0.3s;
-    animation: edit-out 0.3s;
-}
+/*.float-close{*/
+    /*color: white;*/
+    /*position: absolute;*/
+    /*z-index: 1000;*/
+    /*top: 5px;*/
+    /*display: block;*/
+    /*opacity: 0;*/
+    /*bottom: 0;*/
+    /*left: 0;*/
+    /*right: 0;*/
+    /*text-align: center;*/
+    /*padding: 0;*/
+    /*margin: 0;*/
+    /*transform: rotateZ(-70deg);*/
+    /*transition: all 0.3s;*/
+    /*animation: edit-out 0.3s;*/
+/*}*/
 
-#container-floating:hover .float-close{
-    animation: edit-in 0.2s;
-    animation-delay: 0.1s;
-    animation-fill-mode: forwards;
-}
+/*#container-floating:hover .float-close{*/
+    /*animation: edit-in 0.2s;*/
+    /*animation-delay: 0.1s;*/
+    /*animation-fill-mode: forwards;*/
+/*}*/
 
-@keyframes edit-in{
-    from {opacity: 0; transform: rotateZ(-70deg);}
-    to {opacity: 1; transform: rotateZ(0deg);}
-}
+/*@keyframes edit-in{*/
+    /*from {opacity: 0; transform: rotateZ(-70deg);}*/
+    /*to {opacity: 1; transform: rotateZ(0deg);}*/
+/*}*/
 
-@keyframes edit-out{
-    from {opacity: 1; transform: rotateZ(0deg);}
-    to {opacity: 0; transform: rotateZ(-70deg);}
-}
+/*@keyframes edit-out{*/
+    /*from {opacity: 1; transform: rotateZ(0deg);}*/
+    /*to {opacity: 0; transform: rotateZ(-70deg);}*/
+/*}*/
 
-@keyframes plus-in{
-    from {opacity: 1; transform: rotateZ(0deg);}
-    to {opacity: 0; transform: rotateZ(180deg);}
-}
+/*@keyframes plus-in{*/
+    /*from {opacity: 1; transform: rotateZ(0deg);}*/
+    /*to {opacity: 0; transform: rotateZ(180deg);}*/
+/*}*/
 
-@keyframes plus-out{
-    from {opacity: 0; transform: rotateZ(180deg);}
-    to {opacity: 1; transform: rotateZ(0deg);}
-}
+/*@keyframes plus-out{*/
+    /*from {opacity: 0; transform: rotateZ(180deg);}*/
+    /*to {opacity: 1; transform: rotateZ(0deg);}*/
+/*}*/
 
-.nds{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    position: fixed;
-    z-index: 300;
-    transform:  scale(0);
-    cursor: pointer;
-}
+/*.nds{*/
+    /*width: 40px;*/
+    /*height: 40px;*/
+    /*border-radius: 50%;*/
+    /*position: fixed;*/
+    /*z-index: 300;*/
+    /*transform:  scale(0);*/
+    /*cursor: pointer;*/
+/*}*/
 
-.nd1{
-    background: #267186;
-    right: 31px;
-    bottom: 85px;
-    animation-delay: 0.2s;
-    animation: bounce-out-nds 0.3s linear;
-    animation-fill-mode:  forwards;
-    box-shadow: 1px 1px 1px 1px #224557;
-}
+/*.nd1{*/
+    /*background: #267186;*/
+    /*right: 31px;*/
+    /*bottom: 85px;*/
+    /*animation-delay: 0.2s;*/
+    /*animation: bounce-out-nds 0.3s linear;*/
+    /*animation-fill-mode:  forwards;*/
+    /*box-shadow: 1px 1px 1px 1px #224557;*/
+/*}*/
 
-.nd3{
-    background: #267186;
-    right: 31px;
-    bottom: 135px;
-    animation-delay: 0.15s;
-    animation: bounce-out-nds 0.15s linear;
-    animation-fill-mode:  forwards;
-    box-shadow: 1px 1px 1px 1px #224557;
-}
+/*.nd3{*/
+    /*background: #267186;*/
+    /*right: 31px;*/
+    /*bottom: 135px;*/
+    /*animation-delay: 0.15s;*/
+    /*animation: bounce-out-nds 0.15s linear;*/
+    /*animation-fill-mode:  forwards;*/
+    /*box-shadow: 1px 1px 1px 1px #224557;*/
+/*}*/
 
-@keyframes bounce-nds{
-    from {opacity: 0;}
-    to {opacity: 1; transform: scale(1);}
-}
+/*@keyframes bounce-nds{*/
+    /*from {opacity: 0;}*/
+    /*to {opacity: 1; transform: scale(1);}*/
+/*}*/
 
-@keyframes bounce-out-nds{
-    from {opacity: 1; transform: scale(1);}
-    to {opacity: 0; transform: scale(0);}
-}
+/*@keyframes bounce-out-nds{*/
+    /*from {opacity: 1; transform: scale(1);}*/
+    /*to {opacity: 0; transform: scale(0);}*/
+/*}*/
 
-#container-floating:hover .nds{
+/*#container-floating:hover .nds{*/
 
-    animation: bounce-nds 0.1s linear;
-    animation-fill-mode:  forwards;
-}
+    /*animation: bounce-nds 0.1s linear;*/
+    /*animation-fill-mode:  forwards;*/
+/*}*/
 
-#container-floating:hover .nd3{
-    animation-delay: 0.08s;
-}
-/* /Floating Button */
+/*#container-floating:hover .nd3{*/
+    /*animation-delay: 0.08s;*/
+/*}*/
+/*!* /Floating Button *!*/
 
 
 /* Modal */
